# japanese-line-break-segmenter

./: .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  health-check.yml
misc/vercel/: README.md
patches/: rakkasjs@0.6.1.patch
src/: package.json
src/components/: icon.tsx  spinner.tsx
src/routes/: index.page.tsx  layout.tsx
src/routes/api/: segment.api.ts
src/styles/: index.css
src/utils/: fetch-utils.ts  hooks.ts  icon.ts  segment.ts  sudachi.ts  types.ts
sudachi/: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.yml  sudachi-wrapper.sh
sudachi.js/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.resources  README.md  docker-compose.yml  index.d.ts  index.js  package-lock.json  package.json
sudachi.js/src/: lib.rs  sudachi_js.rs
sudachi.wasm/: .gitignore  Cargo.toml  README.md  example.js  package-lock.json  package.json  test.sh
sudachi.wasm/src/: lib.rs
