[package]
name = "sudachi_wasm"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sudachi = { git = "https://github.com/hi-ogawa/sudachi.rs.git", branch = "feat-wasm-build" }
wasm-bindgen = "0.2.83"

# for local dev (TODO: maybe use git submodule?)
# [patch."https://github.com/hi-ogawa/sudachi.rs.git"]
# sudachi = { path = "../../../others/sudachi.rs/sudachi" }
