[package]
name = "sudachi_wasm"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sudachi = { path = "../sudachi.rs/sudachi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2.83" }

[features]
default = []
embed_dictionary = []
